<resources>
    <string name="app_name">AmazonApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">A paragraph is a group of words put together to form a group that is usually longer than a sentence. Paragraphs are often made up of several sentences. There are usually between three and eight sentences. Paragraphs can begin with an indentation (about five spaces), or by missing a line out, and then starting again. This makes it easier to see when one paragraph ends and another begins. </string>


    <string name="Registrationp">Profile Page</string>
    <string name="first_namep">FIRST NAME</string>
    <string name="last_namep">LAST NAME</string>
    <string name="email_addressp">EMAIL ADDRESS</string>
    <string name="Contact_numberp">CONTACT NUMBER</string>
    <string name="countryp">COUNTRY</string>
    <string name="cityp">CITY</string>
    <string name="provincep">PROVINCE</string>
    <string name="postal_codep">POSTAL CODE</string>
    <string name="addressp">ADDRESS</string>
    <string name="btn_save">SAVE CHANGES</string>
    <string name="btn_edit">Edit</string>

    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile number</string>

    <!--string use in registration form  -->
    <string name="Registration_message">New User Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email address</string>
    <string name="Contact_number">Contact Number</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="postal_code">Postal Code</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_sign_up">Sign up</string>


    <!--display error message in registration form
    <string name="first_name_error">Enter your First Name</string>
    <string name="last_name_error">Enter Last Name</string>
    <string name="email_error">Enter Correct Email</string>
    <string name="contact_error">Enter Correct Contact no</string>
    <string name="password_error">Enter Password</string>
    <string name="confirm_password_error">Password do not match</string>-->

    <string-array name="clothes_names">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="clothes_description">
        <item>This is a good quality</item>
        <item>This is a good quality</item>
        <item>This is a good quality</item>
        <item>This is a good quality</item>
        <item>This is a good quality</item>
        <item>This is a good quality</item>
        <item>This is a good quality</item>
        <item>This is a good quality</item>
    </string-array>

    <string-array name="system">

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>
</resources>
